Cleaning up some code and tweaking some settings

--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 <link rel="stylesheet" type="text/css" href="fullPage.js-master/jquery.fullPage.css" />
 <link rel="stylesheet" type="text/css" href="css/main.css" />
 
-
 </head>
 <body>
-
 
 <ul id="menu">
 	<li data-menuanchor="aboutPage" class="active"><a href="#aboutPage">About</a></li>
@@ -29,9 +27,9 @@
     		<div class="about-photo-container column column-50">
     			<img class="about-photo" src="images/dawn-circle-photo.png" alt="Photo of Dawn"/>
     		</div>
-    		<div class="column column-50 last text-block">
+    		<div class="column column-50 text-block">
     			<p>I am a Software Engineer with ten years of experience in software development, five of which are in web development. I have a Bachelor of Science degree in Computer Science from the University of Michigan.  You can read more about my experience in the <a href="#skillsPage">Skills &amp; Experience</a> section.</p>
-    			<p>I recently completed a continuing education class at <a href="http://www.thinkful.com" target="_blank">Thinkful.com</a> where I designed front-end web applications using the latest technology. These include:  JavaScript, jQuery, HTML5, CSS3 and Sass. I am a self-starter who enjoys challenges and quickly learns new concepts and technical skills.  You can see my projects in my <a href="#portfolioPage">Portfolio</a>.<p>
+    			<p>I recently completed a continuing education class at <a href="http://www.thinkful.com" target="_blank">Thinkful.com</a>, where I designed front-end web applications using the latest technology. These include:  JavaScript, jQuery, HTML5, CSS3 and Sass. I am a self-starter who enjoys challenges and quickly learns new concepts and technical skills.  You can see my projects in my <a href="#portfolioPage">Portfolio</a>.</p>
     		</div>
     	</div>
     </div>
@@ -51,7 +49,7 @@
     			<h2>Shopping List App</h2>
     			<p>jQuery, HTML5, Sass, CSS3</p>
     		</div>
-    		<div class="column column-50 last">
+    		<div class="column column-50">
                 <div class="project">
                     <a href="http://sdrothco.github.io/kids-map/" target="_blank">
                         <img class="project-img" src="images/kids-map.gif" alt="Things To Do With Kids App"/>
@@ -73,7 +71,7 @@
     			<h2>Hot Or Cold Game</h2>
     			<p>JavaScript, jQuery, HTML5, CSS3</p>
     		</div>
-    		<div class="column column-50 last">
+    		<div class="column column-50">
                 <div class="project">
                     <a href="http://sdrothco.github.io/doctor-who-quiz/" target="_blank">
                         <img class="project-img" src="images/doctor-who-quiz.gif" alt="Doctor Who Quiz"/>
@@ -95,7 +93,7 @@
     			<h2>Stack Overflow</h2>
     			<p>JavaScript, jQuery, HTML5, CSS3</p>
     		</div>
-    		<div class="column column-50 last">
+    		<div class="column column-50">
                 <div class="project">
                     <a href="http://sdrothco.github.io/jquery-streetfighter/main.html" target="_blank">
                         <img class="project-img" src="images/street-fighter.gif" alt="Street Fighter Game Demo"/>
@@ -113,19 +111,34 @@
     		<div class="column column-100">
     			<h1 class="page-header">Skills &amp; Experience</h1>
     		</div>
-    		<div class="column column-100">
-                <h2>User Experience Technologies:</h2>
-                <p>JavaScript, jQuery, HTML5, CSS3, Sass,<br/>
-                    RESTful APIs, JSON/JSONP, AJAX,<br/>
+            
+            <div class="column column-100 text-block">
+                <h2>Skills</h2>
+            </div>
+    		<div class="column column-33 text-block">
+                <h3>User Experience Technologies:</h3>
+                <p>JavaScript, jQuery, HTML5, CSS3, Sass,
+                    RESTful APIs, JSON/JSONP, AJAX,
                     Responsive Design, Java Server Pages (JSP)</p>
- 
-
-                <h2>Server-side / Database:</h2>
-                <p>Java, C++, Oracle SQL, JDBC,<br/>
+            </div>
+            <div class="column column-33 text-block">
+                <h3>Server-side / Database:</h3>
+                <p>Java, C++, Oracle SQL, JDBC,
                     XML, XSLT, SGML</p>
+            </div>
+            <div class="column column-33 text-block">
                  
-                <h2>Tools:</h2>
+                <h3>Tools:</h3>
                 <p>Git, Chrome DevTools</p>
+            </div>
+
+            <div class="column column-100 text-block">
+                <h2>Experience</h2>
+                <p>I have worked at Sun Microsystems, Global Crossing Conferencing, Boeing, and Motorola.</p>
+                <p>At Sun Microsystems, my team was responsible for globalizing and internationalizing the Sun.com website.  I developed display renderers to retrieve localized content from a content managment sytem and display it on the website to company design specs.  The display renderers utilized Java,  Java Server Pages (JSP), XML, XSLT, and HTML and were developed on a UNIX system.</p>
+                <p>At Global Crossing Conferencing, I developed a server-side web application to moderate conference calls.  Utilized Java, JSP, Servlets, XML, XSLT, HTML, SQL, and JDBC.</p>  
+                <p>At The Boeing Company, I led a team of 3 developers to create an interactive maintenance manual for the Apache Helicopter.  This manual was a custom SGML browser with hyperlinks, hotspotted CGM graphics, bookmarks, annotations, and amendment capability.  The manual was written in Visual C++ with MFC and ran on Windows NT.</p>
+                <p>At Motorola, I was responsible for designing, managing, and implementing an inventory control and verification system using C++, object-oriented analysis and design, Oracle SQL, and Motif GUI libraries on a UNIX system</p>
             </div>
     	</div>
     </div>
