Changed some wording and tweaked some styles.

--- a/index.html
+++ b/index.html
@@ -115,18 +115,18 @@
             <div class="column column-100 text-block">
                 <h2>Skills</h2>
             </div>
-    		<div class="column column-33 text-block">
+    		<div class="column column-33 text-block column-padding">
                 <h3>User Experience Technologies:</h3>
                 <p>JavaScript, jQuery, HTML5, CSS3, Sass,
                     RESTful APIs, JSON/JSONP, AJAX,
                     Responsive Design, Java Server Pages (JSP)</p>
             </div>
-            <div class="column column-33 text-block">
+            <div class="column column-33 text-block column-padding">
                 <h3>Server-side / Database:</h3>
                 <p>Java, C++, Oracle SQL, JDBC,
                     XML, XSLT, SGML</p>
             </div>
-            <div class="column column-33 text-block">
+            <div class="column column-33 text-block column-padding">
                  
                 <h3>Tools:</h3>
                 <p>Git, Chrome DevTools</p>
@@ -134,11 +134,18 @@
 
             <div class="column column-100 text-block">
                 <h2>Experience</h2>
-                <p>I have worked at Sun Microsystems, Global Crossing Conferencing, Boeing, and Motorola.</p>
-                <p>At Sun Microsystems, my team was responsible for globalizing and internationalizing the Sun.com website.  I developed display renderers to retrieve localized content from a content managment sytem and display it on the website to company design specs.  The display renderers utilized Java,  Java Server Pages (JSP), XML, XSLT, and HTML and were developed on a UNIX system.</p>
-                <p>At Global Crossing Conferencing, I developed a server-side web application to moderate conference calls.  Utilized Java, JSP, Servlets, XML, XSLT, HTML, SQL, and JDBC.</p>  
-                <p>At The Boeing Company, I led a team of 3 developers to create an interactive maintenance manual for the Apache Helicopter.  This manual was a custom SGML browser with hyperlinks, hotspotted CGM graphics, bookmarks, annotations, and amendment capability.  The manual was written in Visual C++ with MFC and ran on Windows NT.</p>
-                <p>At Motorola, I was responsible for designing, managing, and implementing an inventory control and verification system using C++, object-oriented analysis and design, Oracle SQL, and Motif GUI libraries on a UNIX system</p>
+                
+                <h3>Sun Microsystems</h3> 
+                <p>My team was responsible for globalizing and internationalizing the Sun.com website.  I developed display renderers to retrieve localized content from a content managment sytem and display it on the website to company design specs.  The display renderers utilized Java,  Java Server Pages (JSP), XML, XSLT, and HTML and were developed on a UNIX system.</p>
+
+                <h3>Global Crossing Conferencing</h3>
+                <p>I developed a server-side web application to moderate conference calls.  Utilized Java, JSP, Servlets, XML, XSLT, HTML, SQL, and JDBC.</p>
+
+                <h3>The Boeing Company</h3>
+                <p>I led a team of 3 developers to create an interactive maintenance manual for the Apache Helicopter.  This manual was a custom SGML browser with hyperlinks, hotspotted CGM graphics, bookmarks, annotations, and amendment capability.  The manual was written in Visual C++ with MFC and ran on Windows NT.</p>
+
+                <h3>Motorola</h3>
+                <p>I was responsible for designing, managing, and implementing an inventory control and verification system using C++, object-oriented analysis and design, Oracle SQL, and Motif GUI libraries on a UNIX system</p>
             </div>
     	</div>
     </div>
